force-app/main/default/objects/Inventario__c/Inventario__c.object-meta.xml
<CustomObject>
    <label>Inventario</label>
    <nameField>
        <displayFormat>I-{00000}</displayFormat>
        <label>Número de Inventario</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventarios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>