force-app/main/default/objects/Inventario__c/fields/Cantidad_de_productos__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_productos__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Cantidad de productos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>