force-app/main/default/objects/Inventario__c/fields/Codigo_de_producto__c.field-meta.xml
<CustomField>
    <fullName>Codigo_de_producto__c</fullName>
    <label>Código de producto</label>
    <length>20</length>
    <type>Text</type>
</CustomField>