force-app/main/default/objects/Inventario__c/fields/Nombre_de_producto__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nombre de producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Inventarios</relationshipLabel>
    <relationshipName>Inventarios</relationshipName>
    <type>Lookup</type>
</CustomField>