force-app/main/default/objects/Inventario__c/fields/Precio_de_producto__c.field-meta.xml
<CustomField>
    <fullName>Precio_de_producto__c</fullName>
    <label>Precio de producto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>